Fix modal z-index

--- a/src/sass/Modal/modal.scss
+++ b/src/sass/Modal/modal.scss
@@ -21,7 +21,7 @@
   transform: translateX(-50%) translateY(-50%);
 
   background-color: white;
-  z-index: 1;
+  z-index: 9999999;
 
   overflow-y: auto;
 }
